@@ -1,3 +1,7 @@
+Next:
+0003618: Make test for Iceboot 'reload' command (corresponding to 'versions all')
+==============================================================
+
 V00-02-08 08-26-09 John Jacobsen john@mail.npxdesigns.com
 0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set (improved test)
 ==============================================================
